--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,11 @@
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 
-<% if current_user: %>
-<%= link_to "Uitloggen",  destroy_user_session_path, :method => :delete %>
+  current language: <%= I18n.locale %>
+  <br />
+
+<% if current_user %>
+<%= link_to t("logout"),  destroy_user_session_path, :method => :delete %>
 
 <%end%>
 <%= yield %>
