--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Hello, Rails!</h1>
-<%= link_to "My Blog", posts_path %>
+Hier wil ik een twitter feed
+
+<% for tweet in @tweets %>
+<div class="hero">
+  <p class="pull-left">
+    <img src="<%= tweet.user.profile_image_url %>" />
+  </p>
+  <div class="container ac">
+    <h3><%= tweet.text %></h3>
+     <%= tweet.text %>
+  </div>
+</div>
+<% end -%>
