--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,18 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div class="container">
+<section>
+  <div class="row">
+  <div class="span12">
+    <% unless flash.empty? %>
 
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
+<%end -%>
 
-  current language: <%= I18n.locale %>
+
+
   <br />
 
 <% if current_user %>
@@ -19,6 +26,9 @@
 
 <%end%>
 <%= yield %>
-
+    </div>
+  </div>
+  </div>
+</section>
 </body>
 </html>
